[package]
name = "transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.18.3" # or latest matching your Solana cluster version
solana-sdk = "1.18.3"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }




